# PenneysGameAnalysis

./: .gitignore  DataGeneration.md  README.md  Scoring.md  main.py  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md  main-checkpoint.py
data/: cooked-deck_seed0_num_of_decks10000.npy  cooked-deck_seed100_num_of_decks10000.npy  cooked-deck_seed101_num_of_decks10000.npy  cooked-deck_seed102_num_of_decks10000.npy  cooked-deck_seed103_num_of_decks10000.npy  cooked-deck_seed104_num_of_decks10000.npy  cooked-deck_seed105_num_of_decks10000.npy  cooked-deck_seed106_num_of_decks10000.npy  cooked-deck_seed107_num_of_decks10000.npy  cooked-deck_seed108_num_of_decks10000.npy  cooked-deck_seed109_num_of_decks10000.npy  cooked-deck_seed10_num_of_decks10000.npy  cooked-deck_seed110_num_of_decks10000.npy  cooked-deck_seed111_num_of_decks10000.npy  cooked-deck_seed112_num_of_decks10000.npy  cooked-deck_seed113_num_of_decks10000.npy  cooked-deck_seed114_num_of_decks10000.npy  cooked-deck_seed115_num_of_decks10000.npy  cooked-deck_seed116_num_of_decks10000.npy  cooked-deck_seed117_num_of_decks10000.npy  cooked-deck_seed118_num_of_decks10000.npy  cooked-deck_seed119_num_of_decks10000.npy  cooked-deck_seed11_num_of_decks10000.npy  cooked-deck_seed120_num_of_decks10000.npy  cooked-deck_seed121_num_of_decks10000.npy  cooked-deck_seed122_num_of_decks10000.npy  cooked-deck_seed123_num_of_decks10000.npy  cooked-deck_seed124_num_of_decks10000.npy  cooked-deck_seed125_num_of_decks10000.npy  cooked-deck_seed126_num_of_decks10000.npy  cooked-deck_seed127_num_of_decks10000.npy  (+483 more)
(+13 files in other folders)
