[project]
name = "penney-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "callable>=0.1.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "wraps>=0.15.0",
]
